--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-native": "^0.72.7",
     "react-native-elements": "^3.4.3",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.3",
     "react-native-picker-select": "^9.0.0",
     "react-native-sqlite-storage": "^6.0.1"
