--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.72.7",
+    "react-native": "^0.73.0",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.3",
     "react-native-picker-select": "^9.0.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-screens": "^3.29.0",
     "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
